chore(inbound-api): add a parameter to group inbound connectors by ConnectorId for c4-connectors (#3880)
* chore(inbound-api): add a parameter to group inbound connectors by ConnectorId for c4-connectors

* feat(inbound-api): add a new activationTimestamp property to the Inbound contexts and API response

* other(inbound-api): Add the connector name to the inbound API + add elements properties at the element level

* other(inbound-api): Update tests

* other(inbound-api): Separate endpoint + small fixes

* other(inbound-api): Add SecurityConfiguration tests

* other(inbound-api): fix ut

(cherry picked from commit 1527365dddf3a96a1fb65f5f0df2958a41ba33d7)